--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>The Data Librarian Gam</h1>
+    <h1>The Data Librarian Game</h1>
     <p>Welcome to your Electron application. <i class="fa-solid fa-envelope"></i></p>
   </body>
   <script>
