--- a/src/www/splash/page1.html
+++ b/src/www/splash/page1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../w3.css" />
     <link rel="stylesheet" href="../fontawesome/css/all.css" />
-    <title>The flrfnjk</title>
+    <title>The Librarian Game - Powered by Electron.JS</title>
 </head>
 <body class="w3-black">
 
@@ -13,11 +13,11 @@
         <img src="electron.png" alt="Electron JS Logo" class="w3-display-middle w3-animate-opacity">
     </div>
 
-    <div id="bottom-logos" class="w3-display-bottommiddle">
-        <span class="w3-text-white">couc <i class="fa-solid fa-trash"></i> ou</span>
-        <img src="path/to/logo1.png" alt="Logo 1" class="logo">
-        <img src="path/to/logo2.png" alt="Logo 2" class="logo">
-        <img src="path/to/logo3.png" alt="Logo 3" class="logo">
+    <div id="bottom-logos" class="w3-display-bottommiddle ">
+        <img src="js.png" class="w3-margin w3-animate-zoom" alt="Logo JS" height="50px">
+        <img src="nodejs.png" class="w3-margin w3-animate-zoom" alt="Logo Nodejs" height="50px">
+        <img src="chromium.png" class="w3-margin w3-animate-zoom" alt="Logo Chromium" height="50px">
+        <img src="vulkan.png" class="w3-margin w3-animate-zoom" alt="Logo Vulkan" height="50px">
     </div>
 
 </body>
