draft login screen

--- a/src/index.html
+++ b/src/index.html
@@ -7,27 +7,11 @@
   </head>
   <body>
     <h1>The Data Librarian Game</h1>
-    <p>Welcome to your Electron application. <i class="fa-solid fa-envelope"></i></p>
+    <p>Welcome to your Electron application. difficulty: <span id="demo-difficulty"></span></p>
   </body>
+  <script src="www/common.js"></script>
   <script>
-    class sessionHandler {
-      constructor(key) {
-        this.innerKey = key;
-      }
-      get v() {
-        return sessionStorage.getItem(this.innerKey);
-      }
-      set v(val) {
-        sessionStorage.setItem(this.innerKey, val);
-      } 
-    }
-
-
-    let score = new sessionHandler("score");
-    let vie = new sessionHandler("vie");
-    
-
-    score.v = "fzrnfuj"
-    score.v
+    const difficulty = new sessionHandler("difficulty");
+    document.getElementById("demo-difficulty").innerHTML = difficulty.v;
   </script>
 </html>
