--- a/src/www/login/page.html
+++ b/src/www/login/page.html
@@ -23,17 +23,17 @@
     </div>
     <div id="login" class="w3-display-middle w3-margin-bottom">
         <center><span><img src="defaultpp.png" height="100px" class="w3-margin"/></span></center>
-        <div style="width: 250px;">
+        <div style="width: 300px;">
             
-            <center><label for="difficulty-select" class="w3-text-white w3-bold">Selectionnez une difficulté:</label></center>
-            <select id="difficulty-select" class="w3-input w3-round-xlarge" style="height: 38.5px;">
+            <center><label for="difficulty-select" class="w3-text-white"><b>Selectionnez une difficulté:</b></label></center>
+            <select id="difficulty-select" class="w3-input w3-round-xxlarge" style="height: 38.5px;">
                 <option value=""></option>
                 <option value="1">Debutant</option>
                 <option value="2">Confirmé</option>
                 <option value="3">Expert</option>
                 <option value="4">Extreme</option>
             </select> 
-            <button id="difficulty-submit" class="w3-button w3-round-xlarge w3-white w3-text-grey" style="position: absolute; right: 0; bottom: 0;"><i class="fa-solid fa-right-to-bracket"></i></button>
+            <button id="difficulty-submit" class="w3-button w3-round-xxlarge w3-white w3-text-grey" style="position: absolute; right: 0; bottom: 0;"><i id="difficulty-submit-logo" class="fa-solid fa-right-to-bracket"></i></button>
         </div>
 
     </div>
