--- a/src/www/splash/page1.html
+++ b/src/www/splash/page1.html
@@ -14,12 +14,13 @@
     </div>
 
     <div id="bottom-logos" class="w3-display-bottommiddle ">
-        <img src="js.png" class="w3-margin w3-animate-zoom" alt="Logo JS" height="50px">
-        <img src="nodejs.png" class="w3-margin w3-animate-zoom" alt="Logo Nodejs" height="50px">
-        <img src="chromium.png" class="w3-margin w3-animate-zoom" alt="Logo Chromium" height="50px">
-        <img src="vulkan.png" class="w3-margin w3-animate-zoom" alt="Logo Vulkan" height="50px">
+        <img src="js.png" class="w3-margin w3-animate-opacity" alt="Logo JS" height="50px">
+        <img src="nodejs.png" class="w3-margin w3-animate-opacity" alt="Logo Nodejs" height="50px">
+        <img src="chromium.png" class="w3-margin w3-animate-opacity" alt="Logo Chromium" height="50px">
+        <img src="vulkan.png" class="w3-margin w3-animate-opacity" alt="Logo Vulkan" height="50px">
     </div>
 
 </body>
+<script src="../common.js"></script>
 <script src="renderer.js"></script>
 </html>
