--- a/src/www/login/page.html
+++ b/src/www/login/page.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'">
     <link rel="stylesheet" href="../w3.css" />
     <link rel="stylesheet" href="../fontawesome/css/all.css" />
     <link rel="stylesheet" href="../common.css" />
@@ -22,11 +23,11 @@
         <h2 class="w3-text-white w3-margin"><i class="fa-solid fa-computer"></i> DataLibrarian OS</h2>
     </div>
     <div id="login" class="w3-display-middle w3-margin-bottom">
-        <center><span><img src="defaultpp.png" height="100px" class="w3-margin"/></span></center>
+        <center><span><img src="defaultpp.png" height="100px" class="w3-margin drop-shadow" style="filter: invert();"/></span></center>
         <div style="width: 300px;">
             
             <center><label for="difficulty-select" class="w3-text-white"><b>Selectionnez une difficulté:</b></label></center>
-            <select id="difficulty-select" class="w3-input w3-round-xxlarge" style="height: 38.5px;">
+            <select id="difficulty-select" class="w3-input w3-round-xxlarge box-shadow" style="height: 38.5px; opacity: 90%;">
                 <option value=""></option>
                 <option value="1">Debutant</option>
                 <option value="2">Confirmé</option>
