--- a/src/www/splash/loader.html
+++ b/src/www/splash/loader.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'">
     <meta http-equiv="refresh" content="1; URL=page1.html">
     <title>The Librarian Game</title>
 </head>
