--- a/src/www/login/page2.html
+++ b/src/www/login/page2.html
@@ -11,7 +11,7 @@
     <style>
         body {
             background-color: black;
-            background-image: url('bg.jpg'); /* Remplacez par le chemin de votre image */
+            background-image: url('bg-blur.jpg'); /* Remplacez par le chemin de votre image */
             background-size: cover; /* L'image couvre tout l'arrière-plan */
             background-repeat: no-repeat; /* Pas de répétition de l'image */
             background-position: center; /* Centre l'image pour s'assurer que le recadrage est équilibré */
@@ -23,12 +23,24 @@
     <div id="ostext" class="w3-display-topleft">
         <h2 class="w3-text-white w3-margin"><i class="fa-solid fa-computer"></i> DataLibrarian OS</h2>
     </div>
-    <div id="hour" class="w3-display-bottomright w3-margin">
-        <h1 class="w3-text-white w3-block w3-right-align" style="font-size: 3vw;" id="clock"><b>12:36</b></h1>
-        <h4 class="w3-text-white">Clicker ou appuyer sur 'espace' pour déverouiller...</h4>
+    <div id="login" class="w3-display-middle w3-margin-bottom w3-animate-opacity">
+        <center><span><img src="user.png" height="100px" class="w3-margin drop-shadow" style="opacity: 80%;"/></span></center>
+        <div style="width: 300px;">
+            
+            <center><label for="difficulty-select" class="w3-text-white"><b>Selectionnez une difficulté:</b></label></center>
+            <select id="difficulty-select" class="w3-input w3-round-xxlarge box-shadow" style="height: 38.5px; opacity: 90%;">
+                <option value=""></option>
+                <option value="1">Debutant</option>
+                <option value="2">Confirmé</option>
+                <option value="3">Expert</option>
+                <option value="4">Extreme</option>
+            </select> 
+            <button id="difficulty-submit" class="w3-button w3-round-xxlarge w3-white w3-text-grey" style="position: absolute; right: 0; bottom: 0;"><i id="difficulty-submit-logo" class="fa-solid fa-right-to-bracket"></i></button>
+        </div>
+
     </div>
 </body>
 <script src="../sa.js"></script>
 <script src="../common.js"></script>
-<script src="renderer1.js"></script>
+<script src="renderer2.js"></script>
 </html>
