--- a/src/www/login/page.html
+++ b/src/www/login/page.html
@@ -24,7 +24,7 @@
         <h2 class="w3-text-white w3-margin"><i class="fa-solid fa-computer"></i> DataLibrarian OS</h2>
     </div>
     <div id="hour" class="w3-display-bottomright w3-margin">
-        <h1 class="w3-text-white w3-block w3-right-align" style="font-size: 3vw;" id="clock"><b>12:36</b></h1>
+        <b><h1 class="w3-text-white w3-block w3-right-align" style="font-size: 3vw;" id="clock"></h1></b>
         <h4 class="w3-text-white">Clicker ou appuyer sur 'espace' pour déverouiller...</h4>
     </div>
 </body>
