add draft of desktop

--- a/src/www/desktop/page.html
+++ b/src/www/desktop/page.html
@@ -23,12 +23,12 @@
     <div id="ostext" class="w3-display-topleft">
         <h2 class="w3-text-white w3-margin"><i class="fa-solid fa-computer"></i> DataLibrarian OS</h2>
     </div>
-    <div id="hour" class="w3-display-bottomright" style="margin: 50px;">
-        <b><h1 class="w3-text-white w3-block w3-right-align w3-margin" style="font-size: 6vw; margin-bottom: 5px;" id="clock"></h1></b>
-        <h4 class="w3-text-white" style="margin-top: 0px;">Cliquer ou appuyer sur 'espace' pour déverouiller...</h4>
-    </div>
+    <div class="w3-white w3-block" style="position: absolute; bottom: 0; opacity: 0.6; height: 52px"></div>
+
+    <div id="logout-btn" class="w3-white w3-padding w3-display-bottomleft w3-large w3-round-xxlarge w3-hover-grey" style="margin-bottom: 5px; margin-left: 10px;"><i class="fa-solid fa-door-open"></i></div>
+
 </body>
 <script src="../sa.js"></script>
 <script src="../common.js"></script>
-<script src="renderer1.js"></script>
+<script src="renderer.js"></script>
 </html>
