add app window system draft

--- a/src/www/desktop/app/demo/app.html
+++ b/src/www/desktop/app/demo/app.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>The Data Librarian Game</title>
-    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <h1>The Data Librarian Game</h1>
     <p>Welcome to your Electron application. difficulty: <span id="demo-difficulty"></span></p>
   </body>
-  <script src="www/common.js"></script>
+  <script src="../../../common.js"></script>
   <script>
     const difficulty = new sessionHandler("difficulty");
     document.getElementById("demo-difficulty").innerHTML = difficulty.v;
