--- a/src/www/desktop/page.html
+++ b/src/www/desktop/page.html
@@ -25,8 +25,20 @@
     </div>
     <div class="w3-white w3-block" style="position: absolute; bottom: 0; opacity: 0.6; height: 52px"></div>
 
-    <div id="logout-btn" class="w3-white w3-padding w3-display-bottomleft w3-large w3-round-xxlarge w3-hover-grey" style="margin-bottom: 5px; margin-left: 10px;"><i class="fa-solid fa-door-open"></i></div>
+    <div id="logout-btn" class="w3-white w3-padding w3-display-bottomleft w3-large w3-round-xxlarge w3-hover-grey cursor-pointer" style="margin-bottom: 5px; margin-left: 10px;"><i class="fa-solid fa-door-open"></i></div>
 
+    <div appname="demo" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 80px; left: 30px;">
+        <center><i class="fa-solid fa-circle-info w3-jumbo w3-center w3-text-white"></i></center>
+        <center><h5 class="w3-text-white"><b>Demo</b></h5></center>
+    </div>
+
+    <div id="app-container" class="hidden w3-animate-zoom" style="position: absolute; top: 20px; left: 20px; width: calc(100% - 40px); height: calc(100% - 100px)">
+        <div class="w3-block border-radius-top backdrop-blur" style="height: 36px;">
+            <h4 class="no-margin w3-center" id="app-name">AppName</h4>
+            <i id="app-close-btn" class="fas fa-times w3-large w3-round-xxlarge w3-white cursor-pointer" style="position: absolute; top:5px; right: 5px; padding: 5px; opacity: 1;"></i>
+        </div>
+        <iframe id="app-iframe" class="border-radius-bottom" src="blank.html" style="border:5px #e96d6d; background-color: white; height: calc(100% - 36px);" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" width="100%" allowfullscreen></iframe>
+    </div>
 </body>
 <script src="../sa.js"></script>
 <script src="../common.js"></script>
