--- a/src/www/splash/page1.html
+++ b/src/www/splash/page1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'">
     <link rel="stylesheet" href="../w3.css" />
+    <link rel="stylesheet" href="../common.css" />
     <link rel="stylesheet" href="../fontawesome/css/all.css" />
     <title>The Librarian Game - Powered by Electron.JS</title>
 </head>
