ajout de l'app crédits

--- a/src/www/desktop/page.html
+++ b/src/www/desktop/page.html
@@ -32,9 +32,9 @@
         <center><h5 class="w3-text-white"><b>Demo</b></h5></center>
     </div>
 
-    <div appname="demo2" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 160px; left: 180px;">
-        <center><i class="fa-solid fa-circle-info w3-jumbo w3-center w3-text-white"></i></center>
-        <center><h5 class="w3-text-white"><b>Demo</b></h5></center>
+    <div appname="credits" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 250px; left: 30px;">
+        <center><i class="fa-regular fa-circle-question w3-jumbo w3-center w3-text-white"></i></center>
+        <center><h5 class="w3-text-white"><b>Crédits</b></h5></center>
     </div>
 
     <div id="app-container" class="hidden w3-animate-zoom" style="position: absolute; top: 20px; left: 20px; width: calc(100% - 40px); height: calc(100% - 100px)">
