--- a/src/www/desktop/app/credits/app.html
+++ b/src/www/desktop/app/credits/app.html
@@ -20,7 +20,7 @@
       <li class="w3-xlarge"><i class="fa-solid fa-font-awesome " ></i> &nbsp;fontawesome </li>
       <li class="w3-xlarge"><i class="fa-brands fa-css3 " ></i> &nbsp;W3.css </li>
     </ul>
-    <p class="w3-display-bottommiddle w3-text-gray">Ce projet a été réalisé dans le cadre d'un projet étudiant en deuxième année de BUT informatique. Ce jeu sérieux à pour objectif de transmettre certaines connaissances à propos du métier de data librarian. <i class="fa-regular fa-copyright"></i> 2024</p>
+    <p class="w3-display-bottommiddle w3-text-gray">Ce projet a été réalisé dans le cadre d'un projet étudiant en deuxième année de BUT informatique. Ce jeu sérieux a pour objectif de transmettre certaines connaissances à propos du métier de data librarian. <i class="fa-regular fa-copyright"></i> 2024</p>
   </body>
   <script src="../../../common.js"></script>
 
