Add debug shortcuts. Minor visual fixes

--- a/src/www/desktop/app/credits/app.html
+++ b/src/www/desktop/app/credits/app.html
@@ -14,11 +14,12 @@
       <li class="w3-xlarge"><i class="fa-solid fa-user "></i> &nbsp;Florian Schmuck </li>
       <li class="w3-xlarge"><i class="fa-solid fa-user "></i> &nbsp;Mélissa Wanner </li>
       <li class="w3-xlarge"><i class="fa-solid fa-user "></i> &nbsp;Priscillia Brucker </li>
-      <li class="w3-xxlarge">Technologies</li>
+      <li class="w3-xxlarge w3-margin-top">Technologies</li>
       <li class="w3-xlarge"><i class="fa-solid fa-atom "></i> &nbsp;Electron </li>
       <li class="w3-xlarge"><i class="fa-brands fa-node-js " ></i> &nbsp;Node Js </li>
       <li class="w3-xlarge"><i class="fa-solid fa-font-awesome " ></i> &nbsp;fontawesome </li>
       <li class="w3-xlarge"><i class="fa-brands fa-css3 " ></i> &nbsp;W3.css </li>
+      <li></li>
     </ul>
     <p class="w3-display-bottommiddle w3-text-gray">Ce projet a été réalisé dans le cadre d'un projet étudiant en deuxième année de BUT informatique. Ce jeu sérieux a pour objectif de transmettre certaines connaissances à propos du métier de data librarian. <i class="fa-regular fa-copyright"></i> 2024</p>
   </body>
