génération de sets de donnée

--- a/src/www/desktop/app/credits/app.html
+++ b/src/www/desktop/app/credits/app.html
@@ -8,8 +8,9 @@
     <title></title>
   </head>
   <body>
-    <h1 class="w3-display-topmiddle"><br><i class="fa-solid fa-computer w3-jumbo" ></i> DataLibrarian OS </h1>
-    <ul class="w3-display-middle w3-ul">
+    <h1 style="text-align: center;" class="w3-mobile"><br><i class="fa-solid fa-computer w3-jumbo" ></i> DataLibrarian OS </h1>
+    <br><br>
+    <ul style="text-align: center;" class="w3-ul w3-mobile">
       <li class="w3-xxlarge">Devs</li>
       <li class="w3-xlarge"><i class="fa-solid fa-user "></i> &nbsp;Florian Schmuck </li>
       <li class="w3-xlarge"><i class="fa-solid fa-user "></i> &nbsp;Mélissa Wanner </li>
@@ -21,7 +22,8 @@
       <li class="w3-xlarge"><i class="fa-brands fa-css3 " ></i> &nbsp;W3.css </li>
       <li></li>
     </ul>
-    <p class="w3-display-bottommiddle w3-text-gray">Ce projet a été réalisé dans le cadre d'un projet étudiant en deuxième année de BUT informatique. Ce jeu sérieux a pour objectif de transmettre certaines connaissances à propos du métier de data librarian. <i class="fa-regular fa-copyright"></i> 2024</p>
+    <br><br><br><br>
+    <p style="text-align: center;" class="w3-text-gray w3-mobile">Ce projet a été réalisé dans le cadre d'un projet étudiant en deuxième année de BUT informatique. Ce jeu sérieux a pour objectif de transmettre certaines connaissances à propos du métier de data librarian. <i class="fa-regular fa-copyright"></i> 2024</p>
   </body>
   <script src="../../../common.js"></script>
 
