--- a/src/www/desktop/page.html
+++ b/src/www/desktop/page.html
@@ -37,6 +37,11 @@
         <center><h5 class="w3-text-white"><b>Crédits</b></h5></center>
     </div>
 
+    <div appname="mails" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 420px; left: 30px;">
+        <center><i class="fa-solid fa-square-envelope fa-circle-question w3-jumbo w3-center w3-text-white"></i></center>
+        <center><h5 class="w3-text-white"><b>Mails</b></h5></center>
+    </div>
+
     <div id="app-container" class="hidden w3-animate-zoom" style="position: absolute; top: 20px; left: 20px; width: calc(100% - 40px); height: calc(100% - 100px)">
         <div class="w3-block border-radius-top backdrop-blur" style="height: 36px;">
             <h4 class="no-margin w3-center" id="app-name">AppName</h4>
