--- a/src/www/login/page2.html
+++ b/src/www/login/page2.html
@@ -37,9 +37,9 @@
             </select> 
             <button id="difficulty-submit" class="w3-button w3-round-xxlarge w3-white w3-text-grey" style="position: absolute; right: 0; bottom: 0;"><i id="difficulty-submit-logo" class="fa-solid fa-right-to-bracket"></i></button>
         </div>
-
     </div>
-</body>
+    <button id="shutdown" class="w3-button w3-circle w3-black" style="position: absolute; right: 5px; bottom: 10px;"><i class="fa-solid fa-power-off"></i></button>
+    
 <script src="../sa.js"></script>
 <script src="../common.js"></script>
 <script src="renderer2.js"></script>
