ajout de types de colonne

--- a/src/www/desktop/app/mails/app.html
+++ b/src/www/desktop/app/mails/app.html
@@ -13,5 +13,6 @@
   </body>
   <script src="../../../common.js"></script>
   <script src="listes.js"></script>
+  <script src="columnMaker.js"></script>
   <script src="app.js"></script>
 </html>
