modified logout screen

--- a/src/www/login/page3.html
+++ b/src/www/login/page3.html
@@ -10,14 +10,20 @@
     <title>The Librarian Game - Déconnexion</title>
     <style>
         body {
-            background-color: #0091DE;
+            background-color: black;
+            background-image: url('bg-blur.jpg'); /* Remplacez par le chemin de votre image */
+            background-size: cover; /* L'image couvre tout l'arrière-plan */
+            background-repeat: no-repeat; /* Pas de répétition de l'image */
+            background-position: center; /* Centre l'image pour s'assurer que le recadrage est équilibré */
+            background-attachment: fixed; /* Optionnel : l'image reste fixe lors du défilement */
         }
     </style>
 </head>
 <body>
     <div id="login" class="w3-display-middle w3-text-white" style = "font-size: 30px; text-align: center;">
-        <p><b>Déconnexion</b></p>
-        <i class="fas fa-spinner w3-spin" style="font-size: 50px;"></i>
+        <p><b>Arrêt en cours...</b></p>
+        <i class="fas fa-hourglass-half fa-fade" style="font-size: 50px;"></i></span>
+        <!--<i class="fas fa-spinner w3-spin" style="font-size: 50px;"></i>-->
     </div>
 </body> 
 <script src="../sa.js"></script>
