tableaux html de données

--- a/src/www/desktop/app/mails/app.html
+++ b/src/www/desktop/app/mails/app.html
@@ -10,6 +10,7 @@
     <br>
     <br>
     <button id="inspect-btn">inspecter les données</button>
+    <div id="maDiv"></div>
   </body>
   <script src="../../../common.js"></script>
   <script src="listes.js"></script>
