mise en forme du tableau

--- a/src/www/desktop/app/mails/app.html
+++ b/src/www/desktop/app/mails/app.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../../../w3.css">
+    <link rel="stylesheet" href="../../../common.css">
+    <link rel="stylesheet" href="../../../fontawesome/css/all.css">
     <title>The Data Librarian Game</title>
   </head>
   <body>
@@ -10,7 +13,7 @@
     <br>
     <br>
     <button id="inspect-btn">inspecter les données</button>
-    <div id="maDiv"></div>
+    <div id="maDiv" class="w3-responsive "></div>
   </body>
   <script src="../../../common.js"></script>
   <script src="listes.js"></script>
