Update button/page logout

--- a/src/www/login/page3.html
+++ b/src/www/login/page3.html
@@ -20,10 +20,10 @@
     </style>
 </head>
 <body>
-    <div id="login" class="w3-display-middle w3-text-white" style = "font-size: 30px; text-align: center;">
+    <div id="logout" class="w3-display-middle w3-text-white" style = "font-size: 30px; text-align: center;">
         <p><b>Arrêt en cours...</b></p>
-        <i class="fas fa-hourglass-half fa-fade" style="font-size: 50px;"></i></span>
-        <!--<i class="fas fa-spinner w3-spin" style="font-size: 50px;"></i>-->
+        <!--<i class="fas fa-hourglass-half fa-fade" style="font-size: 50px;"></i></span>-->
+        <i class="fas fa-spinner w3-spin" style="font-size: 50px;"></i>
     </div>
 </body> 
 <script src="../sa.js"></script>
