--- a/src/www/login/page2.html
+++ b/src/www/login/page2.html
@@ -20,6 +20,7 @@
     </style>
 </head>
 <body>
+    <div id="black-fader" style="position:absolute; width: 100%; height: 100%; background-color: black; z-index: 100; pointer-events: none; display: none;"></div>
     <div id="ostext" class="w3-display-topleft">
         <h2 class="w3-text-white w3-margin"><i class="fa-solid fa-computer"></i> DataLibrarian OS</h2>
     </div>
