new round shutdown btn

--- a/src/www/login/page.html
+++ b/src/www/login/page.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../w3.css" />
     <link rel="stylesheet" href="../fontawesome/css/all.css" />
     <link rel="stylesheet" href="../common.css" />
+    <link rel="preload" as="image" href="bg-blur.jpg">
     <title>The Librarian Game - Login</title>
     <style>
         body {
@@ -20,6 +21,7 @@
     </style>
 </head>
 <body>
+    <div id="black-fader" style="position:absolute; width: 100%; height: 100%; background-color: black; z-index: 100; pointer-events: none;"></div>
     <div id="ostext" class="w3-display-topleft">
         <h2 class="w3-text-white w3-margin"><i class="fa-solid fa-computer"></i> DataLibrarian OS</h2>
     </div>
