--- a/src/www/login/page2.html
+++ b/src/www/login/page2.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../w3.css" />
     <link rel="stylesheet" href="../fontawesome/css/all.css" />
     <link rel="stylesheet" href="../common.css" />
+    <link rel="preload" as="image" href="bg-blur.jpg">
     <title>The Librarian Game - Login</title>
     <style>
         body {
@@ -38,7 +39,7 @@
             <button id="difficulty-submit" class="w3-button w3-round-xxlarge w3-white w3-text-grey" style="position: absolute; right: 0; bottom: 0;"><i id="difficulty-submit-logo" class="fa-solid fa-right-to-bracket"></i></button>
         </div>
     </div>
-    <button id="shutdown" class="w3-button w3-circle w3-black w3-large w3-round-xxlarge" style="position: absolute; right: 10px; bottom: 10px;"><i class="fa-solid fa-power-off"></i></button>
+    <button id="shutdown" class="w3-button w3-circle w3-black w3-large w3-round-xxlarge" style="background: rgba(255, 255, 255, 0.2) !important; position: absolute; right: 15px; bottom: 15px; height: 50px;"><i class="fa-solid fa-power-off"></i></button>
     
 <script src="../sa.js"></script>
 <script src="../common.js"></script>
