new session management

--- a/src/www/desktop/app/database/app.html
+++ b/src/www/desktop/app/database/app.html
@@ -53,12 +53,12 @@
   <div class="w3-container data-card">
     <div class="w3-card-4 w3-light-grey w3-panel w3-round-xlarge">
       <h3>Statistiques de la Base</h3>
-      <p><i class="fas fa-list-ul"></i> <strong>Nombre de lignes:</strong> <span id="totalRows">0</span></p>
-      <p><i class="fas fa-exclamation-triangle"></i> <strong>Nombre de lignes corrompues:</strong> <span id="corruptRows">0</span></p>
-      <p><i class="fas fa-percentage"></i> <strong>Taux de corruption:</strong> <span id="corruptionRate">0%</span></p>
+      <p><i class="fas fa-list-ul"></i> <strong>Nombre de lignes:</strong> <span id="total-rows">0</span></p>
+      <p><i class="fas fa-exclamation-triangle"></i> <strong>Nombre de lignes corrompues:</strong> <span id="corrupted-rows">0</span></p>
+      <p><i class="fas fa-percentage"></i> <strong>Taux de corruption:</strong> <span id="corruption-rate">0%</span></p>
 
-      <div class="w3-border">
-        <div class="w3-grey" style="height:24px;width:20%"></div>
+      <div class="w3-border w3-round-xlarge">
+        <div class="w3-grey w3-round-xlarge" style="height:12px;" id="corruption-rate-bar"></div>
       </div>
       
       <p><i class="fas fa-star"></i> <strong>Score:</strong> <span id="score">0</span></p>
