Change app mails

--- a/src/www/desktop/page.html
+++ b/src/www/desktop/page.html
@@ -19,7 +19,6 @@
         }
     </style>
 </head>
-<body>
     <div id="black-fader" style="position:absolute; width: 100%; height: 100%; background-color: black; z-index: 100; pointer-events: none;"></div>
     <div id="ostext" class="w3-display-topleft">
         <h2 class="w3-text-white w3-margin"><i class="fa-solid fa-computer"></i> DataLibrarian OS</h2>
@@ -41,6 +40,11 @@
     <div appname="mails" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 420px; left: 30px;">
         <center><i class="fa-solid fa-square-envelope fa-circle-question w3-jumbo w3-center w3-text-white"></i></center>
         <center><h5 class="w3-text-white"><b>Mails</b></h5></center>
+    </div>
+
+    <div appname="dataViewer" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 590px; left: 30px;">
+        <center><i class="fa-solid fa-square-envelope fa-circle-question w3-jumbo w3-center w3-text-white"></i></center>
+        <center><h5 class="w3-text-white"><b>DataViewer</b></h5></center>
     </div>
 
     <div id="app-container" class="hidden w3-animate-zoom" style="position: absolute; top: 20px; left: 20px; width: calc(100% - 40px); height: calc(100% - 100px)">
