--- a/src/www/desktop/app/dataViewer/app.html
+++ b/src/www/desktop/app/dataViewer/app.html
@@ -8,14 +8,15 @@
     <title>The Data Librarian Game</title>
   </head>
   <body>
-     <!-- test...
-    <div class="w3-container w3-top w3-padding" style="background-color: #47B3B1; height: 40px; display: flex; align-items: center;">
-      <i class="fas fa-envelope w3-large w3-text-white" style="margin-right: 10px;"></i>
-      <h2 class="w3-text-white" style="margin: 0;">Mails</h2>
-    </div>-->
-
-    
-
+    <h1>Bienvenue dans votre messagerie mail</h1>
+    <p>blablabla</p>
+    <br>
+    <br>
+    <button id="inspect-btn">inspecter les données</button>
+    <div id="maDiv" class="w3-responsive "></div>
   </body>
   <script src="../../../common.js"></script>
+  <script src="listes.js"></script>
+  <script src="columnMaker.js"></script>
+  <script src="app.js"></script>
 </html>
