--- a/src/www/desktop/app/database/app.html
+++ b/src/www/desktop/app/database/app.html
@@ -24,30 +24,16 @@
     }
 
     .data-card {
-        max-width: 400px;
-        margin: auto;
+      max-width: 500px;
+      margin: auto;
     }
 
-    .progress-bar {
-      height: 20px;
-      width: 100%;
-      background: linear-gradient(to right, green, red);
-      border-radius: 5px;
-      overflow: hidden;
-    }
-
-    .progress {
-      height: 100%;
-      width: 0;
-      background: rgba(255, 255, 255, 0.2);
-      transition: width 1s ease-in-out;
-    }
 </style>
 </head>
 <body>
 
   <div class="w3-container w3-teal">
-    <h2><i class="fas fa-database"></i> Miracle DB</h2>
+    <h2><i class="fas fa-database"></i> <b>Miracle DataBase</b></h2>
   </div>
   
   <div class="w3-container data-card">
