--- a/src/www/desktop/app/dataViewer/app.html
+++ b/src/www/desktop/app/dataViewer/app.html
@@ -13,6 +13,7 @@
     <br>
     <br>
     <button id="inspect-btn">inspecter les données</button>
+    <button id="selectionEnd-btn">selection terminée</button>
     <div id="maDiv" class="w3-responsive "></div>
   </body>
   <script src="../../../common.js"></script>
