--- a/src/www/desktop/page.html
+++ b/src/www/desktop/page.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../w3.css" />
     <link rel="stylesheet" href="../fontawesome/css/all.css" />
     <link rel="stylesheet" href="../common.css" />
-    <title>The Librarian Game - Desktop</title>
+    <title>Infodex Infinity - Desktop</title>
     <style>
         body {
             background-color: black;
