--- a/src/www/login/page.html
+++ b/src/www/login/page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../fontawesome/css/all.css" />
     <link rel="stylesheet" href="../common.css" />
     <link rel="preload" as="image" href="bg-blur.jpg">
-    <title>The Librarian Game - Login</title>
+    <title>Infodex Infinity - Login</title>
     <style>
         body {
             background-color: black;
