--- a/src/www/login/page3.html
+++ b/src/www/login/page3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../w3.css" />
     <link rel="stylesheet" href="../fontawesome/css/all.css" />
     <link rel="stylesheet" href="../common.css" />
-    <title>The Librarian Game - Déconnexion</title>
+    <title>Infodex Infinity - Déconnexion</title>
     <style>
         body {
             background-color: black;
