--- a/src/www/splash/loader.html
+++ b/src/www/splash/loader.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'">
     <meta http-equiv="refresh" content="1; URL=page1.html">
-    <title>The Librarian Game</title>
+    <title>Infodex Infinity</title>
 </head>
 <body style="background: black;">
 </body>
