--- a/src/www/splash/page2.html
+++ b/src/www/splash/page2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../w3.css" />
     <link rel="stylesheet" href="../common.css" />
     <link rel="stylesheet" href="../fontawesome/css/all.css" />
-    <title>The Librarian Game - Powered by Electron.JS</title>
+    <title>Infodex Infinity - Powered by Electron.JS</title>
 </head>
 <body class="w3-black">
 
