--- a/src/www/desktop/app/database/app.html
+++ b/src/www/desktop/app/database/app.html
@@ -15,9 +15,6 @@
       background-position: center;
       background-attachment: fixed;
     }
-    .w3-container {
-      padding: 16px;
-    }
 
     .w3-panel {
       margin-top: 20px;
@@ -32,11 +29,11 @@
 </head>
 <body>
 
-  <div class="w3-container w3-teal">
+  <div class="w3-container w3-teal w3-padding">
     <h2><i class="fas fa-database"></i> <b>Miracle DataBase</b></h2>
   </div>
   
-  <div class="w3-container data-card">
+  <div class="w3-container data-card w3-padding">
     <div class="w3-card-4 w3-light-grey w3-panel w3-round-xlarge">
       <h3>Statistiques de la Base</h3>
       <p><i class="fas fa-list-ul"></i> <strong>Nombre de lignes:</strong> <span id="total-rows">0</span></p>
