New stats name on miracle app #13

--- a/src/www/desktop/app/database/app.html
+++ b/src/www/desktop/app/database/app.html
@@ -36,8 +36,8 @@
   <div class="w3-container data-card w3-padding">
     <div class="w3-card-4 w3-light-grey w3-panel w3-round-xlarge">
       <h3>Statistiques de la Base</h3>
-      <p><i class="fas fa-list-ul"></i> <strong>Nombre de lignes:</strong> <span id="total-rows">0</span></p>
-      <p><i class="fas fa-exclamation-triangle"></i> <strong>Nombre de lignes corrompues:</strong> <span id="corrupted-rows">0</span></p>
+      <p><i class="fas fa-list-ul"></i> <strong>Nombre de données:</strong> <span id="total-rows">0</span></p>
+      <p><i class="fas fa-exclamation-triangle"></i> <strong>Nombre de données corrompues:</strong> <span id="corrupted-rows">0</span></p>
       <p><i class="fas fa-percentage"></i> <strong>Taux de corruption:</strong> <span id="corruption-rate">0%</span></p>
 
       <div class="w3-border w3-round-xlarge">
