Prevents users from navigating in history

--- a/src/www/splash/page2.html
+++ b/src/www/splash/page2.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="w3-display-bottommiddle">
-        <h4 class="w3-text-white w3-animate-opacity">Un projet etudiant de Melissa W, Priscillia B et Florian S.</h4>
+        <h4 class="w3-text-white w3-animate-opacity">Un projet étudiant de Melissa W, Priscillia B et Florian S.</h4>
     </div>
 
 </body>
