ajustement image et ajout audio #27

--- a/src/www/gameover/page.html
+++ b/src/www/gameover/page.html
@@ -10,7 +10,13 @@
 	<title>The Librarian Game - Game Over</title>
 </head>
 <body>
-	<img src="./explosion.webp" alt="">
+	<!--universal-soundbank.com 
+		uppbeat.io
+	-->
+	<audio controls autoplay>
+		<source src="bruitageExplosion.mp3" type="audio/mp3">
+	  </audio>
+	<img src="./explosion2.webp" class="w3-image w3-round w3-hover-sepia w3-display-middle" style="height: 100%;" alt="explosion">
 
 
 </body>
