trying a new explosion sound effect

--- a/src/www/gameover/page.html
+++ b/src/www/gameover/page.html
@@ -14,8 +14,8 @@
 		uppbeat.io
 	-->
 	<audio controls autoplay>
-		<source src="bruitageExplosion.mp3" type="audio/mp3">
-	  </audio>
+		<source src="bruitageExplosion2.mp3" type="audio/mp3">
+	</audio>
 	<img src="./explosion2.webp" class="w3-image w3-round w3-hover-sepia w3-display-middle" style="height: 100%;" alt="explosion">
 
 
