--- a/src/www/gameover/page.html
+++ b/src/www/gameover/page.html
@@ -8,6 +8,16 @@
 	<link rel="stylesheet" href="../common.css" />
 	<link rel="stylesheet" href="../fontawesome/css/all.css" />
 	<title>The Librarian Game - Game Over</title>
+	<style>
+		body {
+			background-color: black;
+			background-image: url('explosion2.webp');
+			background-size: cover;
+			background-repeat: no-repeat;
+			background-position: center;
+			background-attachment: fixed;
+		}
+	</style>
 </head>
 <body>
 	<!--universal-soundbank.com 
@@ -16,7 +26,6 @@
 	<audio controls autoplay>
 		<source src="bruitageExplosion2.mp3" type="audio/mp3">
 	</audio>
-	<img src="./explosion2.webp" class="w3-image w3-round w3-hover-sepia w3-display-middle" style="height: 100%;" alt="explosion">
 
 
 </body>
