--- a/src/www/gameover/page.html
+++ b/src/www/gameover/page.html
@@ -11,7 +11,7 @@
 	<style>
 		@font-face {
 			font-family: 'FontFail'; 
-			src: url('../fonts/FontFail.ttf') format('truetype');
+			src: url('FontFail.ttf') format('truetype');
 			font-weight: normal;
 			font-style: normal;
 		}
