--- a/src/www/desktop/app/credits/app.html
+++ b/src/www/desktop/app/credits/app.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../../fontawesome/css/all.css">
     <title></title>
   </head>
-  <body>
+  <body style="margin-left: 20%; margin-right: 20%;">
     <h1 style="text-align: center;" class="w3-mobile"><br><i class="fa-solid fa-computer w3-jumbo" ></i> DataLibrarian OS </h1>
     <br><br>
     <ul style="text-align: center;" class="w3-ul w3-mobile">
