--- a/src/www/gameover/page.html
+++ b/src/www/gameover/page.html
@@ -19,7 +19,7 @@
 		/* Styles pour centrer le contenu de la page */
 		body {
 			background-color: black;
-			background-image: url('explosion2.webp');
+			background-image: url('explosion.webp');
 			background-size: cover;
 			background-repeat: no-repeat;
 			background-position: center;
@@ -66,7 +66,7 @@
 </head>
 <body>
 	<div class="flash"></div>
-	<audio controls autoplay>
+	<audio controls autoplay style="display: none;">
 		<source src="bruitageExplosion2.mp3" type="audio/mp3">
 	</audio>
 
