--- a/src/www/desktop/app/mails/app.html
+++ b/src/www/desktop/app/mails/app.html
@@ -8,15 +8,14 @@
   <title>The Data Librarian Game</title>
 </head>
 <style> 
-  .btn-lu
-  {
-      width: 5px;             
-      height: 5px;             
-      border-radius: 50%;      
-      background-color: blue;
-      margin: 5px
-  }
-            
+  .btn-lu {
+        width: 7px;
+        height: 7px;
+        border-radius: 50%;
+        background-color: #008080;
+        margin: 5px;
+        cursor: pointer;
+    } 
 </style>
 <body>
   <!-- Barre de titre -->
@@ -24,35 +23,36 @@
     <i class="fas fa-envelope w3-xxlarge w3-text-white" style="margin-right: 15px;"></i>
     <h1 class="w3-text-white" style="margin: 0; font-size: 24px; font-weight: 400;">Bienvenue sur vos mails</h1>
   </div>
-
+Z
   <!-- Conteneur principal -->
   <div class="w3-row" style="margin-top: 60px;">
-
     <!-- La sidebar/menu des dossiers -->
-    <nav class="w3-sidebar w3-light-grey w3-bar-block w3-rightbar" style="width:250px;">
+    <nav class="w3-sidebar w3-light-grey w3-bar-block w3-rightbar" 
+        style="width: 220px; height: 100vh; position: fixed;">
       <h3 class="w3-bar-item">Dossiers</h3>
-      <a href="#" class="w3-bar-item w3-button" id = "boite-reception">Boîte de réception</a>
+      <a href="#" class="w3-bar-item w3-button" id="boite-reception">Boîte de réception</a>
       <a href="#" class="w3-bar-item w3-button" id="corbeille">Corbeille</a>
     </nav>
 
-    <div class="w3-col" style="margin-left: 250px;">
-      <div class="w3-row">  
-        <!-- Colonne de la liste des emails (au centre) -->
-        <div class="w3-col m5" style="height: 100vh">
-          <ul class="w3-ul" id="message-list">
-          </ul>
-        </div>
+    <!-- Contenu principal, avec un espace pour la sidebar -->
+    <div class="w3-row" style="margin-left: 220px;">
+      <!-- Colonne de la liste des emails (à gauche) -->
+      <div class="w3-col" style="width: 45%; height: 100vh; border-right: 1px solid lightgray;">
+        <ul class="w3-ul" id="message-list">
+          <!-- Les emails s'affichent ici -->
+        </ul>
+      </div>
 
-        <!-- Colonne du contenu de l'email (à droite) -->
-        <div class="w3-col m6 " style="border-left: 1px solid lightgray; height: 100vh ">
-          <div class="w3-center" id ="contenu-mail">
-            <h2>Contenu de l'email</h2>
-            <p>Veuillez séléctionner un email pour afficher son contenu.</p>
-          </div>
-        </div>
+    <!-- Colonne du contenu de l'email (à droite) -->
+    <div class="w3-col" style="width: 55%; height: 100vh;">
+      <div class="w3-center" id="contenu-mail">
+        <h2>Contenu de l'email</h2>
+        <p>Veuillez sélectionner un email pour afficher son contenu.</p>
       </div>
     </div>
   </div>
+</div>
+
 </body>
 <script src="../../../common.js"></script>
 <script src="mails.js"></script> 
