--- a/src/www/desktop/app/mails/app.html
+++ b/src/www/desktop/app/mails/app.html
@@ -13,9 +13,14 @@
         height: 7px;
         border-radius: 50%;
         background-color: #008080;
-        margin: 5px;
+        margin: 6px;
         cursor: pointer;
-    } 
+  } 
+
+  .active {
+    background-color: #D3D3D3; /* Couleur grise */
+    
+  }
 </style>
 <body>
   <!-- Barre de titre -->
@@ -23,7 +28,7 @@
     <i class="fas fa-envelope w3-xxlarge w3-text-white" style="margin-right: 15px;"></i>
     <h1 class="w3-text-white" style="margin: 0; font-size: 24px; font-weight: 400;">Bienvenue sur vos mails</h1>
   </div>
-Z
+
   <!-- Conteneur principal -->
   <div class="w3-row" style="margin-top: 60px;">
     <!-- La sidebar/menu des dossiers -->
