--- a/src/www/gameover/page2.html
+++ b/src/www/gameover/page2.html
@@ -16,8 +16,12 @@
 		}
 	
 		body, html {
-		  height: 100%;
-		  background-color: black; /* Fond noir pour la page */
+			height: 100%;
+			background-image: url('fondAbstrait_censored.jpg');
+			background-size: cover;
+			background-repeat: no-repeat;
+			background-position: center;
+			background-attachment: fixed;
 		}
 	
 		.container {
@@ -27,7 +31,6 @@
 	
 		.box {
 		  flex: 1; /* Par défaut, toutes les boîtes ont la même largeur */
-		  background-color: black; /* Fond noir pour chaque boîte */
 		  padding: 1%;
 		  align-items: center;
 		  display: flex;
@@ -35,6 +38,11 @@
 	
 		.box.middle {
 		  flex: 1.5; /* Les deux boîtes du milieu sont plus larges */
+		}
+
+		.box.middle img {
+			width: 100%;       /* L'image prend toute la largeur de la boîte */
+			object-fit: cover; /* L'image remplit la boîte tout en conservant ses proportions */
 		}
 	  </style>
 	</head>
@@ -49,7 +57,7 @@
 			</div>
 		</div> <!-- Deuxième boîte plus large -->
 		<div class="box middle">
-			<img src="ali_ayadi-fache.png" class="w3-round"> 
+			<img src="matthieu_zimerman-fache.png" class="w3-round"> 
 		</div> <!-- Troisième boîte plus large -->
 		<div class="box"></div> <!-- Quatrième boîte -->
 	  </div>
