--- a/src/www/gameover/page2.html
+++ b/src/www/gameover/page2.html
@@ -52,12 +52,12 @@
 		<div class="box middle">
 			<div class="w3-panel w3-sand">
 				<span style="font-size:150px;line-height:0.6em;opacity:0.2">❝</span>
-				<p class="w3-xlarge" style="margin-top:-40px"><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non massa vitae risus fermentum ullamcorper.
+				<p class="w3-xlarge" style="margin-top:-40px "><i id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non massa vitae risus fermentum ullamcorper.
 				Phasellus risus urna, ornare in aliquam id, porttitor sit amet sapien. Nulla facilisi.</i></p>
 			</div>
 		</div> <!-- Deuxième boîte plus large -->
 		<div class="box middle">
-			<img src="matthieu_zimerman-fache.png" class="w3-round"> 
+			<img src="cedric_wemmert-content.jpg" class="w3-round" id="photo"> 
 		</div> <!-- Troisième boîte plus large -->
 		<div class="box"></div> <!-- Quatrième boîte -->
 	  </div>
