--- a/src/www/gameover/page.html
+++ b/src/www/gameover/page.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'">
+	<meta http-equiv="refresh" content="5; URL=page2.html">
 	<link rel="stylesheet" href="../w3.css" />
 	<link rel="stylesheet" href="../common.css" />
 	<link rel="stylesheet" href="../fontawesome/css/all.css" />
