random text on gameover page #27

--- a/src/www/gameover/page.html
+++ b/src/www/gameover/page.html
@@ -65,7 +65,7 @@
 		}
 	</style>
 </head>
-<body>
+<body onclick="document.location.href='page2.html'">
 	<div class="flash"></div>
 	<audio controls autoplay style="display: none;">
 		<source src="bruitageExplosion2.mp3" type="audio/mp3">
