--- a/src/www/gameover/page.html
+++ b/src/www/gameover/page.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'">
-	<meta http-equiv="refresh" content="5; URL=page2.html">
+	<meta http-equiv="refresh" content="12; URL=page2.html">
 	<link rel="stylesheet" href="../w3.css" />
 	<link rel="stylesheet" href="../common.css" />
 	<link rel="stylesheet" href="../fontawesome/css/all.css" />
@@ -68,7 +68,7 @@
 <body onclick="document.location.href='page2.html'">
 	<div class="flash"></div>
 	<audio controls autoplay style="display: none;">
-		<source src="bruitageExplosion2.mp3" type="audio/mp3">
+		<source src="bruitageExplosion.mp3" type="audio/mp3">
 	</audio>
 
 	<h1>You failed ...</h1>
