--- a/src/www/gameover/page2.html
+++ b/src/www/gameover/page2.html
@@ -46,7 +46,7 @@
 		}
 	  </style>
 	</head>
-	<body>
+	<body onclick="document.location.href='../login/page.html'">
 	  <div class="container">
 		<div class="box"></div> <!-- Première boîte -->
 		<div class="box middle">
