updated all desktop app to use new dynamic app name api

--- a/src/www/desktop/app/credits/app.html
+++ b/src/www/desktop/app/credits/app.html
@@ -26,7 +26,7 @@
     <p style="text-align: center;" class="w3-text-gray w3-mobile">Ce projet a été réalisé dans le cadre d'un projet étudiant en deuxième année de BUT informatique. Ce jeu sérieux a pour objectif de transmettre certaines connaissances à propos du métier de data librarian. <i class="fa-regular fa-copyright"></i> 2024</p>
   </body>
   <script src="../../../common.js"></script>
-
+  <script>broadcastUpdateAppName("Crédits");</script>
 </html>
 
 
