--- a/src/www/desktop/app/mails/app.html
+++ b/src/www/desktop/app/mails/app.html
@@ -43,7 +43,7 @@
   <!-- Barre de titre -->
   <div class="w3-container w3-top w3-padding w3-teal" style="height: 60px; display: flex; align-items: center; box-shadow: 0 4px 10px rgba(0,0,0,0.3);">
     <i class="fas fa-envelope w3-xxlarge w3-text-white" style="margin-right: 15px;"></i>
-    <h1 class="w3-text-white" style="margin: 0; font-size: 24px; font-weight: 400;">J-mail</h1>
+    <h1 class="w3-text-white" style="margin: 0; font-size: 24px; font-weight: 400;">JaiMail</h1>
   </div>
 
   <!-- Conteneur principal -->
