creation guide du joueur #21

--- a/src/www/desktop/page.html
+++ b/src/www/desktop/page.html
@@ -27,9 +27,9 @@
 
 	<div id="logout-btn" class="w3-white w3-padding w3-display-bottomleft w3-large w3-round-xxlarge w3-hover-grey cursor-pointer" style="margin-bottom: 5px; margin-left: 10px;"><i class="fa-solid fa-door-open"></i></div>
 
-	<div appname="demo" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 80px; left: 30px;">
+	<div appname="notes" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 80px; left: 30px;">
 		<center><i class="fa-solid fa-circle-info w3-jumbo w3-center w3-text-white"></i></center>
-		<center><h5 class="w3-text-white"><b>Demo</b></h5></center>
+		<center><h5 class="w3-text-white"><b>Notes</b></h5></center>
 	</div>
 
 	<div appname="credits" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 250px; left: 30px;">
