ajout marge notes #21

--- a/src/www/desktop/app/notes/app.html
+++ b/src/www/desktop/app/notes/app.html
@@ -37,8 +37,8 @@
           <h2>Conseils et astuces</h3>
           <p>
             Je te conseille de ne pas trainer, <strong>chaque minute compte</strong>.
-            Aussi ce n'est pas parce que les mails peuvent êtres mis à la <strong>corbeille</strong> qu'ils doivent l'être alors <strong>n'en abuse pas</strong>.
-            Enfin tu aura un petit <strong>bonus</strong> si tu fais des sans-fautes.
+            Aussi ce n'est pas parce que les mails peuvent êtres mis à la corbeille qu'ils doivent l'être alors n'en abuse pas.
+            Enfin tu aura un petit bonus si tu fais des sans-fautes.
           </p>
           <p></p>
           <p>Si tu prends tout ca en compte tu devrais avoir toutes les clés en main pour réussir, je te fais confiance pour la suite !</p>
