ajout avec pop-up de la possibilité de corriger sois meme ou de renvoyer au chercheur #24

--- a/src/www/desktop/app/dataViewer/app.html
+++ b/src/www/desktop/app/dataViewer/app.html
@@ -13,9 +13,10 @@
 		<br>
 		<br>
 		<button id="inspect-btn">inspecter les données</button>
-		<button id="selectionEnd-btn">selection terminée</button>
+		<button id="selectionEnd-btn">accepter les données</button>
 		<div id="maDiv" class="w3-responsive "></div>
 	</body>
+	<script src="../../../sa.js"></script>
 	<script src="../../../common.js"></script>
 	<script src="listes.js"></script>
 	<script src="columnMaker.js"></script>
