add unselect button to data viewer#2

--- a/src/www/desktop/app/dataViewer/app.html
+++ b/src/www/desktop/app/dataViewer/app.html
@@ -14,6 +14,7 @@
 		<br>
 		<button id="inspect-btn">inspecter les données</button>
 		<button id="selectionEnd-btn">accepter les données</button>
+		<button id="unselect-btn">déselectionner tout</button>
 		<div id="maDiv" class="w3-responsive "></div>
 	</body>
 	<script src="../../../sa.js"></script>
