Start of new Skills and Satisfaction implementation

--- a/src/www/desktop/app/database/app.html
+++ b/src/www/desktop/app/database/app.html
@@ -43,8 +43,20 @@
 			<div class="w3-border w3-round-xlarge">
 				<div class="w3-grey w3-round-xlarge" style="height:12px;" id="corruption-rate-bar"></div>
 			</div>
-			
-			<p><i class="fas fa-star"></i> <strong>Score:</strong> <span id="score">0</span></p>
+			<p></p>
+		</div>
+		<div class="w3-card-4 w3-light-grey w3-panel w3-round-xlarge">
+			<h3>Statistiques des Usagers</h3>
+			<p><i class="fas fa-user-check"></i> <strong>Taux de satisfaction:</strong> <span id="satisfaction-rate">0</span></p>
+			<div class="w3-border w3-round-xlarge">
+				<div class="w3-grey w3-round-xlarge" style="height:12px;" id="satisfaction-rate-bar"></div>
+			</div>
+
+			<p><i class="fas fa-user-graduate"></i> <strong>Taux de compétances:</strong> <span id="skill-rate">0</span></p>
+			<div class="w3-border w3-round-xlarge">
+				<div class="w3-grey w3-round-xlarge" style="height:12px;" id="skill-rate-bar"></div>
+			</div>
+			<p></p>
 		</div>
 		<div class="w3-card-4 w3-white w3-panel w3-round-xlarge">
 			<h3>Informations Complémentaires</h3>
