--- a/src/www/login/page.html
+++ b/src/www/login/page.html
@@ -27,8 +27,7 @@
 	</div>
 	<div id="hour" class="w3-display-bottomright" style="margin: 50px;">
 		<b><h1 class="w3-text-white w3-block w3-right-align w3-margin" style="font-size: 6vw; margin-bottom: 0px;" id="clock"></h1></b>
-		<h3 class="w3-text-white w3-right-align" style="margin-top: -20px; width: 100%;">Meilleur score: <span id="highscore"></span> points</h3>
-		<h4 class="w3-text-white" style="margin-top: 0px;">Cliquer ou appuyer sur 'espace' pour battre ce score...</h4>
+		<h4 class="w3-text-white" style="margin-top: 0px;">Cliquer ou appuyer sur 'espace' pour déverouiller...</h4>
 	</div>
 </body>
 <script src="../sa.js"></script>
