adjusted line count

--- a/src/www/desktop/app/notes/app.html
+++ b/src/www/desktop/app/notes/app.html
@@ -47,4 +47,5 @@
     </div>
   </body>
   <script src="../../../common.js"></script>
+  <script>broadcastUpdateAppName("Notes - Guide du Médiateur des Données");</script>
 </html>
